# scale-bits

./: CHANGELOG.md  Cargo.toml  FILE_TEMPLATE  README.md  RELEASING.md
.github/workflows/: rust.yml
src/: bits.rs  decode_iter.rs  dynamic.rs  encode_iter.rs  lib.rs  serde.rs
src/bits/: bits.rs  mod.rs  serde.rs
src/scale/: decode_iter.rs  encode_iter.rs  format.rs  mod.rs
src/utils/: iter_bits.rs  iter_from_bits.rs  mod.rs
