[package]
name = "scale-bits"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"

license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/paritytech/scale-bits"
documentation = "https://docs.rs/scale-bits"
homepage = "https://www.parity.io/"
description = "A SCALE compatible representation of a collection of bits"
keywords = ["parity", "scale", "encoding", "decoding", "bits"]
include = ["Cargo.toml", "src/**/*.rs", "README.md", "LICENSE"]

[features]
default = ["serde"]

# Allow Bits to be serialized and deserialized from boolean arrays.
serde = ["dep:serde"]

[dependencies]
scale-info = { version = "2.2.0", default-features = false, features = ["std"] }
codec = { package = "parity-scale-codec", version = "3.2.0", default-features = false, features = [] }
thiserror = "1.0.34"
serde = { version = "1", optional = true }

[dev-dependencies]
codec = { package = "parity-scale-codec", version = "3.2.0", default-features = false, features = ["bit-vec"] }
bitvec = "1"
serde_json = "1.0.85"
