[package]
name = "scale-bits"
version = "0.4.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"

license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/paritytech/scale-bits"
documentation = "https://docs.rs/scale-bits"
homepage = "https://www.parity.io/"
description = "A SCALE compatible representation of a collection of bits"
keywords = ["parity", "scale", "encoding", "decoding", "bits"]
include = ["Cargo.toml", "src/**/*.rs", "README.md", "LICENSE"]

[features]
default = ["std", "serde", "scale-info"]
std = [
    "scale-info?/std",
    "serde?/std",
]

# Allow Bits to be serialized and deserialized from boolean arrays.
serde = ["dep:serde"]

# Implement TypeInfo for Bits, and allow extracting Format from scale-info
# registry
scale-info = ["dep:scale-info"]

[dependencies]
scale-info = { version = "2.7.0", default-features = false, optional = true }
codec = { package = "parity-scale-codec", version = "3.2.0", default-features = false }
serde = { version = "1", optional = true, default-features = false, features = ["alloc"] }

[dev-dependencies]
scale-info = { version = "2.7.0", default-features = false, features = ["std", "bit-vec"] }
codec = { package = "parity-scale-codec", version = "3.2.0", default-features = false, features = ["bit-vec"] }
bitvec = "1"
serde_json = "1.0.85"
